mkdir nsis deploy folder explicitly

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -209,6 +209,7 @@ jobs:
       #
       - name: Make NSIS installer
         run: |
+          mkdir -p deploy\windows\nsis\
           move "${{env.APPLICATION}}" deploy\windows\nsis\ 
           cd deploy\windows\nsis
           makensis /X"SetCompressor /FINAL lzma" resources\setup.nsi
