--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -214,8 +214,12 @@ jobs:
           cd deploy\windows\nsis
           echo current dir
           dir
+          echo nfobuilder
+          dir NFOBuilder
+          echo nfobuilder/bin
+          dir NFOBuilder/bin
           echo up one dir
-          dir..
+          dir ..
           makensis /X"SetCompressor /FINAL lzma" ..\resources\setup.nsi
           ren *.exe ${{env.EXECUTABLE}}-${{env.VERSION}}-Windows.exe
 
