--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -213,6 +213,8 @@ jobs:
           move "${{env.APPLICATION}}" deploy\windows\nsis\ 
           echo resources folder
           dir NFOBuilder\resources
+          echo resources folder 2
+          dir resources
           makensis /X"SetCompressor /FINAL lzma" NFOBuilder\resources\setup.nsi
           ren *.exe ${{env.EXECUTABLE}}-${{env.VERSION}}-Windows.exe
 
