more DIRs after creation ffs

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -211,8 +211,9 @@ jobs:
         run: |
           mkdir -p deploy\windows\nsis\ 
           move "${{env.APPLICATION}}" deploy\windows\nsis\ 
-          dir D:\a\NFOBuilder\NFOBuilder\deploy\windows\nsis\NFOBuilder\bin
           makensis /X"SetCompressor /FINAL lzma" D:\a\NFOBuilder\NFOBuilder\resources\setup.nsi
+          dir
+          dir D:\a\NFOBuilder\NFOBuilder\deploy\windows\nsis\NFOBuilder\bin
           ren *.exe ${{env.EXECUTABLE}}-${{env.VERSION}}-Windows.exe
 
       #
