--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -82,7 +82,7 @@ jobs:
       # Rename AppImage to match "%AppName%-%Version%-Linux.AppImage" format
       #
       - name: Rename AppImage
-        run: mv *.AppImage ${{env.EXECUTABLE}}-${{env.VERSION}}-Linux.AppImage
+        run: mv *.AppImage ${{env.EXECUTABLE}}-linux.AppImage
 
       #
       # Upload AppImage to build artifacts
@@ -90,8 +90,8 @@ jobs:
       - name: Upload AppImage
         uses: actions/upload-artifact@v4.4.0
         with:
-          name: ${{env.EXECUTABLE}}-${{env.VERSION}}-Linux.AppImage
-          path: ${{env.EXECUTABLE}}-${{env.VERSION}}-Linux.AppImage
+          name: ${{env.EXECUTABLE}}-linux.AppImage
+          path: ${{env.EXECUTABLE}}-linux.AppImage
 
   #
   # macOS build
@@ -137,7 +137,7 @@ jobs:
       #
       - name: Create ZIP file
         run: |
-          ditto -c -k --sequesterRsrc --keepParent "${{env.APPLICATION}}.app" ${{env.EXECUTABLE}}-${{env.VERSION}}-macOS.zip
+          ditto -c -k --sequesterRsrc --keepParent "${{env.APPLICATION}}.app" ${{env.EXECUTABLE}}-macOS.zip
 
       #
       # Upload ZIP to build artifacts
@@ -145,8 +145,8 @@ jobs:
       - name: Upload ZIP
         uses: actions/upload-artifact@v4.4.0
         with:
-          name: ${{env.EXECUTABLE}}-${{env.VERSION}}-macOS.zip
-          path: ${{env.EXECUTABLE}}-${{env.VERSION}}-macOS.zip
+          name: ${{env.EXECUTABLE}}-macOS.zip
+          path: ${{env.EXECUTABLE}}-macOS.zip
 
   #
   # Windows build
