--- a/resources/NFOBuilder.desktop
+++ b/resources/NFOBuilder.desktop
@@ -1,8 +1,8 @@
 [Desktop Entry]
 Type=Application
 Name=NFO Builder
-Exec=AppRun %F
+Exec=/home/runner/work/NFOBuilder/NFOBuilder/NFO-Creator %F
 Icon=default
 Comment=Create NFO files for Plex.
 Terminal=true
-Categories=Utility
+Categories=Utility;
