--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -50,13 +50,13 @@ jobs:
           ./linuxdeployqt resources/*.desktop -appimage -bundle-non-qt-libs -extra-plugins=imageformats/libqsvg.so
 
       - name: Rename AppImage
-        run: mv *.AppImage ${{env.EXECUTABLE}}-${{env.VERSION}}-linux.AppImage
+        run: mv *.AppImage ${{env.EXECUTABLE}}-linux.AppImage
 
       - name: Upload AppImage
         uses: actions/upload-artifact@v4.4.0
         with:
-          name: ${{env.EXECUTABLE}}-${{env.VERSION}}-linux.AppImage
-          path: ${{env.EXECUTABLE}}-${{env.VERSION}}-linux.AppImage
+          name: ${{env.EXECUTABLE}}-linux.AppImage
+          path: ${{env.EXECUTABLE}}-linux.AppImage
 
   build-mac:
     runs-on: macos-latest
@@ -86,13 +86,13 @@ jobs:
 
       - name: Create ZIP file
         run: |
-          ditto -c -k --sequesterRsrc --keepParent "${{env.APPLICATION}}.app" ${{env.EXECUTABLE}}-${{env.VERSION}}-macOS.zip
+          ditto -c -k --sequesterRsrc --keepParent "${{env.APPLICATION}}.app" ${{env.EXECUTABLE}}-macOS.zip
 
       - name: Upload ZIP
         uses: actions/upload-artifact@v4.4.0
         with:
-          name: ${{env.EXECUTABLE}}-${{env.VERSION}}-macOS.zip
-          path: ${{env.EXECUTABLE}}-${{env.VERSION}}-macOS.zip
+          name: ${{env.EXECUTABLE}}-macOS.zip
+          path: ${{env.EXECUTABLE}}-macOS.zip
 
   build-windows:
     runs-on: windows-latest
@@ -145,8 +145,8 @@ jobs:
       - name: Upload NSIS installer
         uses: actions/upload-artifact@v4.4.0
         with:
-          name: ${{env.EXECUTABLE}}-${{env.VERSION}}-windows.exe
-          path: D:\a\NFOBuilder\NFOBuilder\${{env.EXECUTABLE}}-${{env.VERSION}}-windows.exe
+          name: ${{env.EXECUTABLE}}-windows.exe
+          path: D:\a\NFOBuilder\NFOBuilder\${{env.EXECUTABLE}}-windows.exe
 
   release:
     needs: [build-linux, build-mac, build-windows]
@@ -173,22 +173,22 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ github.workspace }}/${{env.EXECUTABLE}}-${{env.VERSION}}-linux.AppImage
-          asset_name: ${{env.EXECUTABLE}}-${{env.VERSION}}-linux.AppImage
+          asset_path: ${{ github.workspace }}/${{env.EXECUTABLE}}-linux.AppImage
+          asset_name: ${{env.EXECUTABLE}}-linux.AppImage
           asset_content_type: application/x-appimage
 
       - name: Upload macOS ZIP
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ github.workspace }}/${{env.EXECUTABLE}}-${{env.VERSION}}-macOS.zip
-          asset_name: ${{env.EXECUTABLE}}-${{env.VERSION}}-macOS.zip
+          asset_path: ${{ github.workspace }}/${{env.EXECUTABLE}}-macOS.zip
+          asset_name: ${{env.EXECUTABLE}}-macOS.zip
           asset_content_type: application/zip
 
       - name: Upload Windows Installer
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ github.workspace }}/${{env.EXECUTABLE}}-${{env.VERSION}}-windows.exe
-          asset_name: ${{env.EXECUTABLE}}-${{env.VERSION}}-windows.exe
+          asset_path: ${{ github.workspace }}/${{env.EXECUTABLE}}-windows.exe
+          asset_name: ${{env.EXECUTABLE}}-windows.exe
           asset_content_type: application/x-msi
