add download-artifact step

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -160,19 +160,23 @@ jobs:
       - name: Set VERSION environment variable
         run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
-      - name: List files
-        run: |
-          pwd
-          ls -la
+      - name: Download Linux AppImage
+        uses: actions/download-artifact@v4.4.0
+        with:
+          name: ${{env.EXECUTABLE}}-linux.AppImage
+          path: ${{env.EXECUTABLE}}-linux.AppImage
 
-      - name: Check for Linux AppImage
-        run: |
-          if [ -f "${{ github.workspace }}/${{env.EXECUTABLE}}-linux.AppImage" ]; then
-            echo "File exists"
-          else
-            echo "File does not exist"
-            exit 1
-          fi
+      - name: Download macOS ZIP
+        uses: actions/download-artifact@v4.4.0
+        with:
+          name: ${{env.EXECUTABLE}}-macOS.zip
+          path: ${{env.EXECUTABLE}}-macOS.zip
+
+      - name: Download Windows Installer
+        uses: actions/download-artifact@v4.4.0
+        with:
+          name: ${{env.EXECUTABLE}}-windows.exe
+          path: ${{env.EXECUTABLE}}-windows.exe
 
       - name: Create Release
         id: create_release
