update CreateAppImage step

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,12 +45,12 @@ jobs:
           chmod a+x linuxdeployqt
           dos2unix resources/*.desktop 
           mkdir -p /home/runner/work/NFOBuilder/NFOBuilder/appdir/opt
+          mkdir -p /home/runner/work/NFOBuilder/NFOBuilder/output
           cp resources/plex-nfo.png /home/runner/work/NFOBuilder/NFOBuilder/appdir/opt/default.png
-          echo appdir
-          ls -l /home/runner/work/NFOBuilder/NFOBuilder/appdir
-          echo appdir/opt
+          echo appdir/opt contents:
           ls -l /home/runner/work/NFOBuilder/NFOBuilder/appdir/opt
-          ./linuxdeployqt resources/*.desktop -appimage -bundle-non-qt-libs -extra-plugins=imageformats/libqsvg.so
+          chmod -R a+rw /home/runner/work/NFOBuilder/NFOBuilder/appdir
+          ./linuxdeployqt /home/runner/work/NFOBuilder/NFOBuilder/appdir/opt/NFOBuilder.desktop -appimage -bundle-non-qt-libs -extra-plugins=imageformats/libqsvg.so
 
       - name: Rename AppImage
         run: mv *.AppImage ${{env.EXECUTABLE}}-linux.AppImage
