--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -40,12 +40,14 @@ jobs:
 
       - name: Create AppImage
         run: |
+          ls -l /home/runner/work/NFOBuilder/NFOBuilder/appdir/opt/NFO-Creator/bin/NFO-Creator
           make INSTALL_ROOT=appdir install
+          chmod -R 755 /home/runner/work/NFOBuilder/NFOBuilder/appdir
           wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" -O linuxdeployqt
           chmod a+x linuxdeployqt
           dos2unix resources/*.desktop
           cp resources/plex-nfo.png /home/runner/work/NFOBuilder/NFOBuilder/appdir/opt/default.png
-          ./linuxdeployqt resources/*.desktop -appimage -unsupported-allow-new-glibc -bundle-non-qt-libs
+          ./linuxdeployqt resources/*.desktop -appimage -unsupported-allow-new-glibc -bundle-non-qt-libs -verbose=2
           chmod +x resources/appimagetool-x86_64.AppImage
           ./resources/appimagetool-x86_64.AppImage release
           ls -l
