--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,7 @@ jobs:
           chmod a+x linuxdeployqt
           dos2unix resources/*.desktop
           cp resources/plex-nfo.png /home/runner/work/NFOBuilder/NFOBuilder/appdir/opt/default.png
-          ./linuxdeployqt resources/*.desktop -appimage -unsupported-allow-new-glibc -bundle-non-qt-libs -verbose=2
+          ./linuxdeployqt resources/*.desktop -appimage -unsupported-allow-new-glibc -bundle-non-qt-libs -appdir=/home/runner/work/NFOBuilder/NFOBuilder/appdir/opt -verbose=3
           chmod +x resources/appimagetool-x86_64.AppImage
           ./resources/appimagetool-x86_64.AppImage release
           ls -l
