--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -43,14 +43,20 @@ jobs:
       # -qmldir="${{env.QML_DIR_NIX}}" from line 75
       - name: Create AppImage
         run: |
-          pwd
-          ls -l | grep NFO-Creator
+          # make INSTALL_ROOT=appdir install
+          # wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" -O linuxdeployqt
+          # chmod a+x linuxdeployqt
+          # ./linuxdeployqt appdir/usr/share/applications/*.desktop -appimage -bundle-non-qt-libs -extra-plugins=imageformats/libqsvg.so
+          echo "appdir/usr/share/applications"
+          ls -l appdir/usr/share/applications
+          echo pwd
+          ls -l
           make INSTALL_ROOT=appdir install
           wget -c -nv "https://github.com/probonopd/linuxdeployqt/releases/download/continuous/linuxdeployqt-continuous-x86_64.AppImage" -O linuxdeployqt
           chmod a+x linuxdeployqt
           dos2unix resources/*.desktop 
           cp resources/plex-nfo.png /home/runner/work/NFOBuilder/NFOBuilder/appdir/opt/default.png
-          ./linuxdeployqt resources/*.desktop -appimage -verbose=3 -no-strip
+          ./linuxdeployqt resources/*.desktop -appimage
 
       - name: Rename AppImage
         run: mv *.AppImage ${{env.EXECUTABLE}}-linux.AppImage
