--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -45,11 +45,14 @@ jobs:
       - name: Create AppImage
         run: |
           make INSTALL_ROOT=appdir install
+          pwd
+          ls -l
           chmod a+x resources/linuxdeployqt-continuous-x86_64.AppImage
           chmod a+x resources/appimagetool-x86_64.AppImage
           dos2unix resources/*.desktop 
           resources/linuxdeployqt-continuous-x86_64.AppImage /home/runner/work/NFOBuilder/NFOBuilder/release/NFOBuilder -appimage -unsupported-allow-new-glibc
           resources/appimagetool-x86_64.AppImage /home/runner/work/NFOBuilder/NFOBuilder/release
+          pwd
           ls -l
           # cp resources/plex-nfo.png /home/runner/work/NFOBuilder/NFOBuilder/appdir/opt/default.png
 
