--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -46,7 +46,7 @@ jobs:
         run: |
           make INSTALL_ROOT=appdir install
           pwd
-          ls -l
+          ls -l appdir
           chmod a+x resources/linuxdeployqt-continuous-x86_64.AppImage
           chmod a+x resources/appimagetool-x86_64.AppImage
           dos2unix resources/*.desktop 
